(Praticando) Adicionando o Docker no Projeto

--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,12 @@
 	<artifactId>mercadolivre</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mercadolivre</name>
+	<packaging>jar</packaging>
 	<description>Implementando o Desafio do Mercado Livre</description>
 
 	<properties>
 		<java.version>11</java.version>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 
 	<dependencies>
@@ -62,7 +64,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
@@ -76,6 +78,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludeDevtools>false</excludeDevtools>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
