--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,19 @@
   
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3307/mercadolivre
+#spring.datasource.url=jdbc:mariadb://127.0.0.1:3307/mercadolivre
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+#spring.datasource.testWhileIdle=true
+#spring.datasource.validationQuery=SELECT 1
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-spring.datasource.username=root
-spring.datasource.password=root
-
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
-
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-
-mercadolivre.jwt.secret=senhasecretamercadolivreguilhermesantos
-mercadolivre.jwt.expiration=1800000
+#spring.datasource.driver-cname=com.mysql.jdbc.Driver
+##spring.datasource.url=jdbc:mysql://localhost:3306/mercadolivre
+##spring.jpa.show-sql=false
+##spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.org.hibernate.dialect.MySQLDialect
+#
+#spring.devtools.remote.secrete=senhadevtols
+#mercadolivre.jwt.secret=senhasecretamercadolivreguilhermesantos
+#mercadolivre.jwt.expiratiolass-n=1800000
