--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,15 @@
 #spring.datasource.validationQuery=SELECT 1
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-#spring.datasource.driver-cname=com.mysql.jdbc.Driver
-##spring.datasource.url=jdbc:mysql://localhost:3306/mercadolivre
-##spring.jpa.show-sql=false
-##spring.jpa.hibernate.ddl-auto=update
-##spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
-##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.org.hibernate.dialect.MySQLDialect
-#
-#spring.devtools.remote.secrete=senhadevtols
-#mercadolivre.jwt.secret=senhasecretamercadolivreguilhermesantos
-#mercadolivre.jwt.expiratiolass-n=1800000
+spring.datasource.url=jdbc:mysql://db:3308/mercadolivre
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.org.hibernate.dialect.MySQLDialect
+
+spring.devtools.remote.secrete=senhadevtols
+mercadolivre.jwt.secret=senhasecretamercadolivreguilhermesantos
+mercadolivre.jwt.expiratiolass-n=1800000
