--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@
 #spring.datasource.validationQuery=SELECT 1
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+
 spring.datasource.url=jdbc:mysql://db:3308/mercadolivre
 spring.datasource.username=root
 spring.datasource.password=root
@@ -18,4 +19,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.org.hibernate.dial
 
 spring.devtools.remote.secrete=senhadevtols
 mercadolivre.jwt.secret=senhasecretamercadolivreguilhermesantos
-mercadolivre.jwt.expiratiolass-n=1800000
+mercadolivre.jwt.expiration=1800000
