--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 #spring.datasource.testWhileIdle=true
 #spring.datasource.validationQuery=SELECT 1
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 
